@@ -36,6 +36,8 @@ Version 1.11.1+svn:
  * User interface:
    * Allow copying the selection in the old (default) lobby using
      Ctrl+C/Command+C.
+   * Color coded the resistance table in the hp display's tooltip.
+   * Tooltip for the movement points display shows the movement costs.
 
  * Miscellaneous and bug fixes:
    * The undo stack is preserved across a save-reload.
