@@ -45,6 +45,8 @@ Version 1.11.1+svn:
  * User interface:
    * Allow copying the selection in the old (default) lobby using
      Ctrl+C/Command+C (bug #5877)
+   * Color coded the resistance table in the hp display's tooltip.
+   * Tooltip for the movement points display shows the movement costs.
  * WML engine:
    * [unit_overlay] and [remove_unit_overlay] now return a more meaningful
      error message if the image= key is missing
